--- a/src/index.css
+++ b/src/index.css
@@ -2,18 +2,16 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
-  background-color: #222629;
 }
 
-form {
+.form {
   display: flex;
-  height: 600px;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
 
-form input {
+.form input {
   margin: 2px;
   width: 40%;
   border: 5px solid none;
@@ -35,20 +33,41 @@ button {
   font-size: 20px;
   border-radius: 4px;
   color: #fff;
-  background-color: #86C232;
+  background-color: #61892F;
   outline-width: 0;
   border: none;
+  box-shadow: 2px 2px 3px 1px #6B6E70;
 }
 
 button:hover {
-  opacity: 0.7;
+  background-color: #86C232;
 }
 
 h2 {
   color: #fff;
 }
 
-.bar {
-  height: 50px;
+.home {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
   background-color: #222629;
+}
+
+.bar {
+  height: 60px;
+  background-color: #222629;
+}
+
+.repos {
+  margin: 5px;
+  padding: 0;
+  background-color: #fff;
+}
+
+.errorMsg {
+  color: red;
+  font-size: 11px;
 }
