--- a/src/index.css
+++ b/src/index.css
@@ -23,6 +23,13 @@ body {
   outline: none;
 }
 
+img {
+  border-radius: 15px;
+  height: 290px;
+  width: 300px;
+  margin: 0 15px;
+}
+
 input:focus {
   box-shadow: 0px 0px 5px 2px #6B6E70;
 }
@@ -82,4 +89,51 @@ h2 {
 
 .header a::selection {
   background-color: #6B6E70;
+}
+
+.screen {
+  margin: 70px;
+}
+
+.float-left {
+  float: left;
+  width: 24%;
+}
+
+.float-right {
+  float: right;
+  width: 71%;
+  padding: 5px;
+  border: 1px solid #222629;
+  border-radius: 5px;
+}
+
+.noMargin {
+  margin: 0;
+  padding: 0;
+}
+
+p.opacity{
+  opacity: 0.5;
+}
+
+.profile a {
+  text-decoration: none;
+  color: black;
+}
+
+.profile a:hover {
+  color: blue;
+}
+
+p strong {
+  margin: 10px 5px 10px 25px;
+}
+
+.margin {
+  margin: 2px;
+}
+
+.user-data {
+  border: 2px solid #000;
 }
