--- a/src/index.css
+++ b/src/index.css
@@ -63,6 +63,18 @@ button:hover {
   background-color: #222629;
 }
 
+.spinner {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
 .repos {
   margin: 5px;
   padding: 0;
